# adventofcode

./: Cargo.toml
2015/01/: Cargo.toml
2015/01/src/: main.rs
2015/02/: Cargo.toml
2015/02/src/: main.rs
2015/03/: Cargo.toml
2015/03/src/: main.rs
2015/04/: Cargo.toml
2015/04/src/: main.rs
2015/05/: Cargo.toml
2015/05/src/: main.rs
2015/06/: Cargo.toml
2015/06/src/: main.rs
2015/07/: Cargo.toml
2015/07/src/: main.rs
2015/08/: Cargo.toml
2015/08/src/: main.rs
2024/01/: Cargo.toml
2024/01/src/: main.rs
2024/02/: Cargo.toml
2024/02/src/: main.rs
2024/03/: Cargo.toml
2024/03/src/: main.rs
2024/04/: Cargo.toml
2024/04/src/: main.rs
2024/05/: Cargo.toml
2024/05/src/: main.rs
2024/06/: Cargo.toml
2024/06/src/: main.rs
2024/07/: Cargo.toml
2024/07/src/: main.rs
2024/08/: Cargo.toml
2024/08/src/: main.rs  map.rs  vec2.rs
2024/09/: Cargo.toml
2024/09/src/: main.rs
2024/10/: Cargo.toml
2024/10/src/: main.rs
2024/11/: Cargo.toml
2024/11/src/: main.rs
2024/12/: Cargo.toml
2024/12/src/: main.rs
2024/13/: Cargo.toml
2024/13/src/: geometry.rs  main.rs
2024/14/: Cargo.toml
2024/14/src/: geometry.rs  main.rs
2024/15/: Cargo.toml
2024/15/src/: geometry.rs  main.rs
2024/16/: Cargo.toml
2024/16/src/: geometry.rs  main.rs
2024/17/: Cargo.toml
2024/17/src/: main.rs  uint3.rs
2024/18/: Cargo.toml
2024/18/src/: main.rs
2024/19/: Cargo.toml
2024/20/: Cargo.toml
2024/21/: Cargo.toml
2024/22/: Cargo.toml
2024/23/: Cargo.toml
2024/24/: Cargo.toml
2024/25/: Cargo.toml
(+8 files in other folders)
