[workspace]
members = ["2015/*", "2024/*"]
resolver = "2"

[workspace.package]
edition = "2021"
publish = false

[workspace.dependencies]
anyhow = "1.0"
rayon = "1.10"
regex = "1.11"
rustc-hash = "2.1"

itoa = "1.0"
md-5 = "0.10.6"

# MD-5 bruteforcing is slow on opt-level=0
[profile.dev.package.aoc-2015-04]
opt-level = 3
