[workspace]
members = ["2015/*", "2024/*"]
resolver = "2"

[workspace.package]
edition = "2021"
publish = false

[workspace.dependencies]
anyhow = "1.0"
rayon = "1.10"
regex = "1.11"
num = "0.4.3"

itoa = "1.0"
itertools = "0.13.0"
petgraph = { version = "0.6.5", features = ["rayon"] }
md-5 = "0.10.6"

[profile.dev]
opt-level = 1
